# jcode

./: Cargo.toml  OAUTH.md  README.md  TELEMETRY.md  codemagic.yaml
.github/workflows/: ci.yml  release.yml  windows-smoke.yml
crates/jcode-desktop/: Cargo.toml  build.rs
crates/jcode-mobile-sim/: Cargo.toml
crates/jcode-mobile-sim/src/: lib.rs  main.rs
docs/: CLIENT_CORE_PRESENTATION_SPLIT_PLAN.md  CODE_QUALITY_TODO.md  COMPILE_PERFORMANCE_PLAN.md  DESKTOP_APP_ARCHITECTURE.md  DESKTOP_CODEBASE_ARCHITECTURE.md  DESKTOP_FIRST_PROTOTYPE.md  IOS_CLIENT.md  MOBILE_SIMULATOR_WORKFLOW.md  TODOIST_CLI.md  WRAPPERS.md
ios/: SIMULATOR_FOUNDATION.md
mockups/jcode-mobile/: add-server.html  chat.html  (+9 more)
scripts/: build_linux_compat.sh  code_size_budget.json  install.ps1  install.sh  mobile_simulator_smoke.sh  panic_budget.json  profile_remote_resume_burst.py  run_terminal_bench_campaign.py  swallowed_error_budget.json  test_size_budget.json
src/: agent.rs  ambient.rs  ambient_runner.rs  ambient_scheduler.rs  background.rs  browser.rs  build.rs  bus.rs  cache_tracker.rs  compaction.rs  config.rs  embedding.rs  embedding_stub.rs  gateway.rs  goal.rs  id.rs  import.rs  lib.rs  logging.rs  main.rs  memory.rs  memory_agent.rs  memory_graph.rs  memory_log.rs  message.rs  notifications.rs  perf.rs  plan.rs  platform.rs  process_title.rs  prompt.rs  protocol.rs  protocol_tests.rs  provider_catalog.rs  provider_catalog_tests.rs  registry.rs  replay.rs  runtime_memory_log.rs  safety.rs  server.rs  (+14 more)
telemetry-worker/: README.md  health.sql  package.json
tests/: provider_matrix.rs
(+252 files in other folders)
