[package]
name = "jcode-mobile-sim"
version = "0.1.0"
edition = "2024"
description = "Headless-first mobile simulator and control CLI for jcode"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jcode-mobile-core = { path = "../jcode-mobile-core" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
